# Anti-Saco-Soltador

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  main.yml
resources/: config.yml
resources/locales/: en_US.yml  es_ES.yml
src/endstone_antidupe/: __init__.py  permissions.py  plugin.py
src/endstone_antidupe/actions/: __init__.py  action.py  builtin.py  executor.py  service_context.py
src/endstone_antidupe/commands/: __init__.py  antidupe_command.py
src/endstone_antidupe/config/: __init__.py  loader.py  models.py
src/endstone_antidupe/detection/: __init__.py  context.py  detector.py  registry.py
src/endstone_antidupe/detection/detectors/: __init__.py  bundle_container.py  bundle_ground.py
src/endstone_antidupe/domain/: __init__.py  confidence.py  models.py
src/endstone_antidupe/i18n/: __init__.py  translator.py
src/endstone_antidupe/persistence/: __init__.py  database.py  repository.py  sqlite_repository.py
src/endstone_antidupe/services/: __init__.py  alert_service.py  cache.py  cooldown.py  metrics.py  rate_limiter.py  stats_service.py
src/endstone_bundle_anti_dupe/: __init__.py  plugin.py
